// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuickReceiveScreen /> renders connected state with real account context and QR code: quick-receive-connected-real-account 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 24,
      },
      {
        "backgroundColor": "#ffffff",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 22,
          "fontWeight": "600",
          "marginBottom": 24,
        },
        {
          "color": "#111111",
        },
      ]
    }
  >
    Quick Receive
  </Text>
  <View
    style={
      [
        {
          "borderRadius": 12,
          "marginBottom": 8,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#e5e7eb",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 0.5,
          },
          {
            "color": "#1f2937",
          },
        ]
      }
    >
      FREIGHTER
       • 
      TESTNET
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "monospace",
            "fontSize": 18,
            "fontWeight": "bold",
            "marginBottom": 20,
          },
          {
            "color": "#111111",
          },
        ]
      }
    >
      GAMOSF...QSLGLP
    </Text>
  </View>
  <View
    style={
      [
        {
          "borderRadius": 16,
          "marginBottom": 30,
          "padding": 16,
        },
        {
          "backgroundColor": "#ffffff",
        },
      ]
    }
  >
    <QRCode
      backgroundColor="#ffffff"
      color="#000000"
      size={220}
      value="https://quickex.to/GAMOSFOKEYHFDGMXIEFEYBUYK3ZMFYN3PFLOTBRXFGBFGRKBKLQSLGLP"
    />
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#3b82f6",
        "borderRadius": 12,
        "marginBottom": 12,
        "opacity": 1,
        "padding": 14,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        [
          {
            "fontWeight": "600",
          },
          {
            "color": "#ffffff",
          },
        ]
      }
    >
      Copy Link
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#e5e7eb",
        "borderRadius": 12,
        "marginBottom": 12,
        "opacity": 1,
        "padding": 14,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        [
          {
            "fontWeight": "600",
          },
          {
            "color": "#111111",
          },
        ]
      }
    >
      Copy Address
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#22c55e",
        "borderRadius": 12,
        "opacity": 1,
        "padding": 14,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        [
          {
            "fontWeight": "600",
          },
          {
            "color": "#ffffff",
          },
        ]
      }
    >
      Share
    </Text>
  </View>
</View>
`;

exports[`<QuickReceiveScreen /> renders disconnected / guest fallback state correctly: quick-receive-disconnected-fallback 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 24,
      },
      {
        "backgroundColor": "#ffffff",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 22,
          "fontWeight": "600",
          "marginBottom": 24,
        },
        {
          "color": "#111111",
        },
      ]
    }
  >
    Quick Receive
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "paddingHorizontal": 16,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 18,
            "fontWeight": "600",
            "marginBottom": 8,
            "textAlign": "center",
          },
          {
            "color": "#111111",
          },
        ]
      }
    >
      No wallet connected
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 14,
            "lineHeight": 20,
            "opacity": 0.8,
            "textAlign": "center",
          },
          {
            "color": "#444444",
          },
        ]
      }
    >
      Connect your Stellar wallet to display your QR code and start receiving payments.
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#3b82f6",
          "borderRadius": 12,
          "marginBottom": 12,
          "marginTop": 24,
          "opacity": 1,
          "padding": 14,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          [
            {
              "fontWeight": "600",
            },
            {
              "color": "#ffffff",
            },
          ]
        }
      >
        Connect Wallet
      </Text>
    </View>
  </View>
</View>
`;

exports[`<QuickReceiveScreen /> renders screenshot snapshots in dark mode for connected and disconnected states: quick-receive-connected-dark 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 24,
      },
      {
        "backgroundColor": "#111827",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 22,
          "fontWeight": "600",
          "marginBottom": 24,
        },
        {
          "color": "#f9fafb",
        },
      ]
    }
  >
    Quick Receive
  </Text>
  <View
    style={
      [
        {
          "borderRadius": 12,
          "marginBottom": 8,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#374151",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 0.5,
          },
          {
            "color": "#f3f4f6",
          },
        ]
      }
    >
      LOBSTR
       • 
      MAINNET
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "monospace",
            "fontSize": 18,
            "fontWeight": "bold",
            "marginBottom": 20,
          },
          {
            "color": "#f9fafb",
          },
        ]
      }
    >
      GAMOSF...QSLGLP
    </Text>
  </View>
  <View
    style={
      [
        {
          "borderRadius": 16,
          "marginBottom": 30,
          "padding": 16,
        },
        {
          "backgroundColor": "#ffffff",
        },
      ]
    }
  >
    <QRCode
      backgroundColor="#ffffff"
      color="#000000"
      size={220}
      value="https://quickex.to/GAMOSFOKEYHFDGMXIEFEYBUYK3ZMFYN3PFLOTBRXFGBFGRKBKLQSLGLP"
    />
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#60a5fa",
        "borderRadius": 12,
        "marginBottom": 12,
        "opacity": 1,
        "padding": 14,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        [
          {
            "fontWeight": "600",
          },
          {
            "color": "#111827",
          },
        ]
      }
    >
      Copy Link
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#374151",
        "borderRadius": 12,
        "marginBottom": 12,
        "opacity": 1,
        "padding": 14,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        [
          {
            "fontWeight": "600",
          },
          {
            "color": "#f9fafb",
          },
        ]
      }
    >
      Copy Address
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#4ade80",
        "borderRadius": 12,
        "opacity": 1,
        "padding": 14,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        [
          {
            "fontWeight": "600",
          },
          {
            "color": "#111827",
          },
        ]
      }
    >
      Share
    </Text>
  </View>
</View>
`;

exports[`<QuickReceiveScreen /> renders screenshot snapshots in dark mode for connected and disconnected states: quick-receive-disconnected-dark 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 24,
      },
      {
        "backgroundColor": "#111827",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 22,
          "fontWeight": "600",
          "marginBottom": 24,
        },
        {
          "color": "#f9fafb",
        },
      ]
    }
  >
    Quick Receive
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "paddingHorizontal": 16,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 18,
            "fontWeight": "600",
            "marginBottom": 8,
            "textAlign": "center",
          },
          {
            "color": "#f9fafb",
          },
        ]
      }
    >
      No wallet connected
    </Text>
    <Text
      style={
        [
          {
            "fontSize": 14,
            "lineHeight": 20,
            "opacity": 0.8,
            "textAlign": "center",
          },
          {
            "color": "#9ca3af",
          },
        ]
      }
    >
      Connect your Stellar wallet to display your QR code and start receiving payments.
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#60a5fa",
          "borderRadius": 12,
          "marginBottom": 12,
          "marginTop": 24,
          "opacity": 1,
          "padding": 14,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          [
            {
              "fontWeight": "600",
            },
            {
              "color": "#111827",
            },
          ]
        }
      >
        Connect Wallet
      </Text>
    </View>
  </View>
</View>
`;
